fix: playlist item hidden under now playing bar

--- a/src/user.css
+++ b/src/user.css
@@ -714,7 +714,7 @@ div[data-testid="hpto-parent-container"] {
   padding: 0 !important;
 }
 
-#spicetify-playlist-list,
+
 .main-view-container__scroll-node,
 .nw2W4ZMdICuBo08Tzxg9
 
@@ -794,6 +794,7 @@ div[data-testid="hpto-parent-container"] {
 
 .main-rootlist-wrapper {
   margin-top: var(--padding-md);
+  margin-bottom: calc(var(--now-playing-bar-height) + var(--gap-lg)) !important;
 }
 
 .main-embedWidgetGenerator-container,
